tests/neg/semantic_union_as_value.baa
// EXPECT: لا يمكن استخدام النوع المركب

اتحاد قيمة {
    صحيح رقم.
}

صحيح الرئيسية() {
    اتحاد قيمة ق.
    صحيح س = ق.
    إرجع ٠.
}
